# me3

./: .gitignore  .lldbinit  .pre-commit-config.yaml  .readthedocs.yaml  .taplo.toml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  INSTALLER_README.txt  Makefile  NEWS.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  cliff.toml  committed.toml  crowdin.yml  giscus.json  installer.nsi  installer.sh  me3.spec  me3.spec.rpkg  mkdocs.yml  mlc_config.json  release-plz.toml  release.toml  rustfmt.toml  typos.toml
.cargo/: config.toml
.github/: codecov.yml  dependabot.yml  labeler.yml  release.yml  setup-windows-toolchain
crates/binary-analysis/: Cargo.toml
crates/binary-analysis/src/: fd4_step.rs  lib.rs  pe.rs  rtti.rs
crates/binary-mapper/: Cargo.toml
crates/binary-mapper/src/: main.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/resources/: manifest.xml
crates/cli/src/: commands.rs  config.rs  db.rs  main.rs  output.rs  settings.rs
crates/cli/src/commands/: info.rs  launch.rs  profile.rs  windows.rs
crates/cli/src/commands/launch/: launcher.rs  named_pipe.rs  proton.rs  steam.rs  strategy.rs
crates/cli/src/commands/launch/named_pipe/: unix.rs  windows.rs
crates/cli/src/commands/launch/strategy/: compat_tool.rs  direct.rs
crates/cli/src/commands/profile/: dialog.rs
crates/cli/src/config/: known_paths.rs
crates/cli/src/db/: logs.rs  profile.rs
crates/cli/ui/: create-profile.slint  profile-dialog.slint
crates/env/: Cargo.toml
crates/env/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: bridge.rs  identity_hasher.rs  lib.rs  message.rs  request.rs
crates/ipc/src/bridge/: buffer.rs  channel.rs  guard.rs  rel.rs  shared.rs  signal.rs
crates/ipc/src/request/: convert.rs
crates/launcher/: Cargo.toml  build.rs
crates/launcher-attach-protocol/: Cargo.toml
crates/launcher-attach-protocol/src/: lib.rs
crates/launcher/src/: game.rs  main.rs  monitor.rs  steam.rs  writer.rs
crates/me3_framework/: Cargo.toml  build.rs
crates/me3_framework/src/: lib.rs
crates/me3_framework/src/framework/: mod.rs
crates/me3_framework/src/framework/hooks/: function_ref.rs  hook.rs  mod.rs
crates/me3_framework/src/framework/overlay/: hook.rs  mod.rs
crates/me3_framework/src/framework/scripting/: mod.rs
crates/me3_framework/src/framework/tracing/: mod.rs  runtime.rs
crates/me3_framework/src/framework/tracing/runtime/: profiler.asm
crates/me3_framework/src/framework/vfs/: hook.rs  mod.rs
crates/me3_game_support/ds3/: Cargo.toml
crates/me3_game_support/ds3/src/: lib.rs
crates/me3_game_support/fromsoft/: Cargo.toml
crates/me3_game_support/fromsoft/src/: lib.rs
crates/me3_game_support/fromsoft/src/sprj/: formats.rs  mod.rs  param.rs
crates/me3_game_support/fromsoft/src/sprj/formats/: container.rs  paramdef.rs  read.rs  write.rs
crates/me3_game_support/fromsoft/src/sprj/formats/container/: dcx.rs
crates/me3_game_support/fromsoft/src/sprj/formats/container/dcx/: read.rs  write.rs
crates/me3_game_support/fromsoft/src/sprj/param/: file.rs  mod.rs
crates/me3_game_support/fromsoft/test-data/formats/dcx/: o000499.objbnd.dcx
crates/me3_host/: Cargo.toml
crates/me3_host/src/: bootstrap.rs  lib.rs  widgets.rs
crates/me3_host/src/bootstrap/: bootstrapper.rs  game.rs  game_support.rs  mod.rs  settings.rs
crates/me3_host/src/bootstrap/game/: ds3.rs  mod.rs
crates/me3_host/src/script_api/: mod.rs
crates/me3_host/src/widgets/: console.rs  mod.rs
crates/me3_host/test-data/: mod-path-is-remembered.toml
crates/me3_test/harness_loader/: Cargo.toml
crates/me3_test/harness_loader/src/: bin.rs  lib.rs
crates/mod-host/: Cargo.toml  build.rs
crates/mod-host-assets/: Cargo.toml  build.rs  mapper-profile.toml
crates/mod-host-assets/include/: dl_allocator.hpp  dl_string_bridge.hpp
crates/mod-host-assets/src/: alloc.rs  bhd5.rs  dl_device.rs  dlc.rs  ebl.rs  file_step.rs  hook.rs  lib.rs  mapping.rs  pe.rs  platform.rs  rtti.rs  rva.rs  singleton.rs  sleep.rs  string.rs  wwise.rs
crates/mod-host-assets/src/alloc/: mod.rs
crates/mod-host-assets/src/mapping/: savefile.rs
crates/mod-host-types/: Cargo.toml
crates/mod-host-types/src/: alloc.rs  game.rs  lib.rs  string.rs  vector.rs
crates/mod-host-types/src/alloc/: default.rs
crates/mod-host-types/src/string/: msvc2012.rs  msvc2015.rs
crates/mod-host-types/src/vector/: msvc2012.rs  msvc2015.rs
crates/mod-host/src/: alloc_hooks.rs  app.rs  asset.rs  asset_archive.rs  asset_hooks.rs  debugger.rs  deferred.rs  detour.rs  diagnostics.rs  executable.rs  filesystem.rs  host.rs  lib.rs  native.rs  plugins.rs  savefile.rs  skip_logos.rs
crates/mod-host/src/alloc_hooks/: mimalloc.rs
crates/mod-host/src/host/: append.rs  game_properties.rs  hook.rs
crates/mod-host/src/host/hook/: curried.rs  thunk.S  thunk.rs
crates/mod-host/src/plugins/: natives.rs  properties.rs  save_file.rs  skip_logos.rs  vfs.rs
crates/mod-host/src/savefile/: game.rs
crates/mod-protocol/: Cargo.toml
crates/mod-protocol/src/: dependency.rs  game.rs  lib.rs  mod_file.rs  native.rs  package.rs  profile.rs
crates/mod-protocol/src/profile/: builder.rs  v1.rs  v2.rs
crates/mod-protocol/test-data/: basic_config.me3.toml  basic_config.me3.toml.expected  basic_config.me3.yaml  basic_config.me3.yaml.expected  plural_packages.me3.expected  singular_package.me3.expected
crates/mod-protocol/test-data/v1/: advanced_config.me3  advanced_config.me3.expected  basic_config.me3  basic_config.me3.expected  plural_packages.me3  singular_package.me3  singular_package.me3.expected
crates/mod-protocol/test-data/v2/: advanced_config.me3  advanced_config.me3.expected  basic_config.me3  basic_config.me3.expected  merge_config.me3.expected  merge_config_a.me3  merge_config_b.me3
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
docs/: changelog.zh.md  configuration-reference.md  configuration-reference.pl.md  configuration-reference.zh.md  getting-started.md  index.md  index.pl.md  index.zh.md  requirements-insiders.in  requirements-insiders.txt  requirements.in  requirements.txt
(+107 files in other folders)
