[workspace]
members = [
  "crates/cli",
  "crates/launcher",
  "crates/launcher-attach-protocol",
  "crates/mod-host",
  "crates/mod-protocol",
  "crates/mod-host-assets",
  "crates/mod-host-types",
  "crates/telemetry",
  "crates/env",
  "crates/xtask",
  "crates/binary-analysis",
]
resolver = "2"

[workspace.package]
version = "0.6.0-prerelease"
edition = "2024"
rust-version = "1.89"
repository = "https://github.com/garyttierney/me3"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unused = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[workspace.lints.clippy]
collapsible_if = "allow"
missing_transmute_annotations = "allow"

[workspace.dependencies]
bincode = "2"
chrono = "0.4"
clap = "4"
color-eyre = { version = "0.6", default-features = false }
crash-context = "0.6"
crash-handler = "0.6"
ctrlc = "3"
directories = "6"
dll-syringe = { version = "0.16", default-features = false, features = ["syringe", "rpc"] }
expect-test = "1"
eyre = { version = "0.6", default-features = false }
from-singleton = { version = "2", features = ["regex-unicode"] }
is-terminal = "0.4"
me3-binary-analysis = { path = "crates/binary-analysis" }
me3-env = { path = "crates/env" }
me3-launcher-attach-protocol = { path = "crates/launcher-attach-protocol" }
me3-mod-host = { path = "crates/mod-host" }
me3-mod-host-assets = { path = "crates/mod-host-assets" }
me3-mod-host-types = { path = "crates/mod-host-types" }
me3-mod-protocol = { path = "crates/mod-protocol" }
me3-telemetry = { package = "me3_telemetry", path = "crates/telemetry" }
memmap = "0.7"
minidump-writer = "0.10"
minidumper = "0.8"
normpath = "1"
pelite = "0.10"
rayon = "1"
regex = "1"
rdvec = "0.2.1"
schemars = "1.0"
sentry = { version = "0.40", default-features = false }
serde = "1"
serde_derive = "1"
serde_json = "1"
steamlocate = "2"
strum = "0.27"
strum_macros = "0.27"
tempfile = "3"
thiserror = "2"
toml = "0.8"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", default-features = false }
ureq = "3"
windows = "0.61"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = 2
strip = "none"