[package]
name = "me3-binary-analysis"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
pelite.workspace = true
rayon.workspace = true
regex.workspace = true
thiserror.workspace = true
undname = "2.1"

[lints]
workspace = true
