[package]
name = "me3-binary-mapper"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Create a mapping of symbols for a game binary"
publish = false

[dependencies]
pelite.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
memmap.workspace = true
rayon.workspace = true

[lints]
workspace = true
