[package]
name = "me3-cli"
version = "0.6.1"
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "me3"
path = "src/main.rs"

[features]
default = []
sentry = ["me3-telemetry/sentry"]

[dependencies]
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true, default-features = false, features = [
    "track-caller",
    "capture-spantrace",
] }
ctrlc.workspace = true
directories.workspace = true
is-terminal.workspace = true
me3-env.workspace = true
me3-launcher-attach-protocol.workspace = true
me3-mod-protocol.workspace = true
me3-telemetry.workspace = true
normpath.workspace = true
open = { version = "5" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
steamlocate.workspace = true
tempfile.workspace = true
toml.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_System_Console"] }
winreg = "0.55.0"
ureq.workspace = true
semver = "1.0.26"

[build-dependencies]
winresource = "0.1"

[lints]
workspace = true
