[package]
name = "me3-cli"
version = "0.10.1"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "me3"
path = "src/main.rs"

[features]
default = []
sentry = ["me3-telemetry/sentry"]

[dependencies]
chrono.workspace = true
clap = { workspace = true, features = ["derive", "wrap_help"] }
color-eyre = { workspace = true, default-features = false }
ctrlc.workspace = true
directories.workspace = true
is-terminal.workspace = true
keyvalues-serde = "0.2.2"
me3-env.workspace = true
me3-launcher-attach-protocol.workspace = true
me3-mod-protocol.workspace = true
me3-telemetry.workspace = true
normpath.workspace = true
open = { version = "5" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_repr = "0.1.20"
shlex = "1.3.0"
steamlocate.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
base64 = "0.22"
getrandom = { version = "0.3", features = ["std"] }
windows = { workspace = true, features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
] }
winreg = "0.55.0"
ureq.workspace = true
semver = "1.0.26"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
winresource = "0.1"

[lints]
workspace = true

[dev-dependencies]
assert_fs = "1.1.3"
pretty_assertions = "1.4"
