[package]
name = "me3-ipc"
version = "0.10.1"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
me3-env.workspace = true
me3-launcher-attach-protocol.workspace = true
rkyv.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
windows = { workspace = true, features = [
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }

[lints]
workspace = true
