[package]
name = "me3-launcher-attach-protocol"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Wire protocol for me3 launcher<->host traffic"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode.workspace = true
eyre = { workspace = true, default-features = false, features = [
    "track-caller",
] }
me3-mod-protocol.workspace = true
serde.workspace = true
serde_derive.workspace = true

[lints]
workspace = true
