[package]
name = "me3-launcher"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
description = "Launcher for me3"
publish = false

[features]
sentry = ["me3_telemetry/sentry", "dep:sentry"]
default = []

[dependencies]
crash-context.workspace = true
eyre = { version = "0.6", default-features = false, features = [
    "track-caller",
] }
windows = { version = "0.61", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }
dll-syringe.workspace = true
ipc-channel.workspace = true
me3-launcher-attach-protocol.workspace = true
me3-mod-protocol.workspace = true
minidump-writer = "0.10"
tracing.workspace = true
sentry = { version = "0.39.0", optional = true }
toml.workspace = true
me3_telemetry = { path = "../telemetry" }
me3-env = { path = "../env" }

[lints]
workspace = true
