[package]
name = "me3-launcher"
version = "0.7.0-prerelease"
repository.workspace = true
edition.workspace = true
license.workspace = true
description = "Launcher for me3"
publish = false

[features]
sentry = ["me3-telemetry/sentry", "dep:sentry"]
default = []

[dependencies]
crash-context.workspace = true
eyre = { workspace = true, default-features = false, features = [
    "track-caller",
] }
windows = { workspace = true, features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }
dll-syringe.workspace = true
me3-launcher-attach-protocol.workspace = true
me3-mod-protocol.workspace = true
minidump-writer.workspace = true
tracing.workspace = true
sentry = { workspace = true, optional = true }
toml.workspace = true
me3-telemetry.workspace = true
me3-env.workspace = true

[lints]
workspace = true
