[package]
name = "me3-mod-host-assets"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Override game assets with local versions"
publish = false

[dependencies]
from-singleton.workspace = true
me3-binary-analysis.workspace = true
me3-mod-host-types.workspace = true
me3-mod-protocol.workspace = true
normpath.workspace = true
pelite = "0.10"
rayon.workspace = true
rdvec.workspace = true
regex = "1"
thiserror.workspace = true
tracing.workspace = true
undname = "2.1"

[dependencies.windows]
features = ["Win32_Media", "Win32_System_Memory", "Win32_System_Kernel", "Win32_System_Threading"]
version = "0.61"

[dev-dependencies]
tracing-subscriber = { workspace = true, default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "tracing-log",
    "std",
] }

[lints]
workspace = true
