[package]
name = "me3-mod-host-assets"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Override game assets with local versions"
publish = false

[dependencies]
from-singleton.workspace = true
undname = "2.1"
pelite = "0.10"
rayon.workspace = true
regex = "1"
smallvec = { version = "1.15.1", features = ["const_generics", "const_new", "union"] }
rdvec.workspace = true
normpath.workspace = true
thiserror.workspace = true
me3-binary-analysis.workspace = true
me3-mod-host-types.workspace = true
me3-mod-protocol.workspace = true
tracing.workspace = true

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Media",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_System_Threading",
]

[lints]
workspace = true
