[package]
name = "me3-mod-host-types"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "C++ and FromSoftware type FFI"
publish = false

[dependencies]
me3-env.workspace = true
me3-mod-protocol.workspace = true
rdvec.workspace = true
thiserror.workspace = true

[dependencies.windows]
version = "0.61"
features = [
    "Win32_System_Memory",
]

[lints]
workspace = true
