[package]
name = "me3-mod-host"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Host DLL providing game extension functionality"

[features]
default = []
sentry = ["me3_telemetry/sentry"]

[lib]
crate-type = ["cdylib"]

[dependencies]
crash-handler = "0.6"
dll-syringe = { workspace = true, features = ["payload-utils"] }
eyre = "0.6"
iced-x86 = "1.21.0"
ipc-channel.workspace = true
me3-mod-protocol.workspace = true
me3-launcher-attach-protocol.workspace = true
me3-mod-host-assets.workspace = true
retour = { git = "https://github.com/Hpmason/retour-rs", features = [
    "static-detour",
] }
serde_json = "1"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
thiserror.workspace = true
windows = { version = "0.61", features = [
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
] }
seq-macro = "0.3.6"
me3_telemetry = { path = "../telemetry" }
libloading = "0.8.8"
me3-env = { version = "0.5.0", path = "../env" }
color-eyre = "0.6.5"

[lints]
workspace = true
