[package]
name = "me3-mod-host"
version = "0.6.1"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Host DLL providing game extension functionality"
publish = false

[features]
default = []
sentry = ["me3-telemetry/sentry"]

[lib]
crate-type = ["cdylib"]

[dependencies]
closure-ffi = { version = "3.0", features = ["coverage", "std", "tuple_trait"] }
color-eyre.workspace = true
crash-handler.workspace = true
dll-syringe = { workspace = true, features = ["payload-utils"] }
eyre = { workspace = true, default-features = false, features = ["track-caller"] }
libloading = "0.8.8"
me3-env.workspace = true
me3-launcher-attach-protocol.workspace = true
me3-mod-host-assets.workspace = true
me3-mod-protocol.workspace = true
me3-telemetry.workspace = true
retour = { git = "https://github.com/Hpmason/retour-rs" }
seq-macro = "0.3.6"
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
windows = { workspace = true, features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[build-dependencies]
winresource = "0.1"

[lints]
workspace = true
