[package]
name = "me3-mod-host"
version = "0.10.1"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Host DLL providing game extension functionality"
publish = false

[features]
default = []
sentry = ["me3-telemetry/sentry"]

[lib]
crate-type = ["cdylib"]

[dependencies]
closure-ffi = { version = "5.0", features = ["coverage", "std", "tuple_trait"] }
color-eyre.workspace = true
dearxan = "0.5.2"
dll-syringe = { workspace = true, features = ["payload-utils"] }
eyre = { workspace = true, default-features = false, features = ["track-caller"] }
from-singleton.workspace = true
libloading = "0.8.8"
libmimalloc-sys = { version = "0.1.44", features = ["v3", "extended"] }
me3-binary-analysis.workspace = true
me3-env.workspace = true
me3-launcher-attach-protocol.workspace = true
me3-mod-host-assets.workspace = true
me3-mod-host-types.workspace = true
me3-mod-protocol.workspace = true
me3-telemetry.workspace = true
pelite.workspace = true
regex.workspace = true
rdvec.workspace = true
rayon.workspace = true
retour = { git = "https://github.com/Hpmason/retour-rs" }
seq-macro = "0.3.6"
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
windows = { workspace = true, features = [
    "Win32_Graphics_Gdi",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
xxhash-rust = { version = "0.8", features = ["std", "xxh3"] }
pkcs1 = { version = "0.7.5", features = ["std"] }
base64 = "0.22.1"
miniz_oxide = { version = "0.8.9", features = ["std"] }

[build-dependencies]
winresource = "0.1"

[lints]
workspace = true
