[package]
name = "me3-mod-protocol"
version = "0.8.1"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Schema definition for me3 mod profiles"
publish = false

[dependencies]
indexmap = "2.11.1"
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
strum.workspace = true
strum_macros.workspace = true
toml.workspace = true
thiserror.workspace = true

[dev-dependencies]
expect-test.workspace = true

[lints]
workspace = true
