[package]
name = "me3_telemetry"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
sentry = ["dep:sentry"]
default = ["sentry"]

[dependencies]

tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
regex = { version = "1.11.1", features = ["unicode-case"] }
tracing-appender = "0.2.3"
serde = "1"
eyre = "0.6.12"
color-eyre = "0.6.5"
me3-env = { version = "0.5.0", path = "../env" }

[dependencies.sentry]
version = "0.38"
default-features = true
features = [
    "tracing",
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "reqwest",
    "release-health",
]
optional = true
[lints]
workspace = true
