[package]
name = "me3_telemetry"
version = "0.6.0-prerelease"
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[features]
sentry = ["dep:sentry"]
default = []

[dependencies]

tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
regex = { version = "1.11.1", features = ["unicode-case"] }
tracing-appender = "0.2.3"
serde = "1"
eyre = { version = "0.6", default-features = false, features = [
    "track-caller",
] }
color-eyre = "0.6.5"
me3-env = { path = "../env" , version = "0.6.0-prerelease" }

[dependencies.sentry]
version = "0.39"
default-features = false
features = [
    "tracing",
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "reqwest",
    "rustls",
    "release-health",
]
optional = true
[lints]
workspace = true
