[package]
name = "me3_telemetry"
version = "0.6.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[features]
sentry = ["dep:sentry"]
default = []

[dependencies]
color-eyre.workspace = true
eyre = { version = "0.6", default-features = false, features = ["track-caller"] }
me3-env.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-error.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "tracing-log",
    "std",
] }

[dependencies.sentry]
default-features = false
features = ["tracing", "backtrace", "contexts", "debug-images", "panic", "ureq", "release-health"]
optional = true
workspace = true
[lints]
workspace = true
