[package]
name = "me3_game_support_fromsoft"
version = "0.1.0"
edition = "2021"

[dependencies]
me3_framework = {path = "../../me3_framework"}

[dependencies.byteorder]
version = "1"

[dependencies.bytemuck]
version = "1"

[dependencies.flate2]
version = "1"

[dependencies.zerocopy]
version = "0.6"

[dependencies.serde]
version = "1"
